# hiredis

./: .gitignore  CMakeLists.txt  Win32_FDAPI.cpp  Win32_FDAPI.h  Win32_fdapi_crt.h  async.c  async.h  hiredis.c  hiredis.h  hiredis.sln  hiredis.vcxproj  net.c  sds.h  test.c  win32fixes.c  win32fixes.h
adapters/: ae.h  libev.h  libevent.h  libuv.h
examples/: example.c
msvs/win32_example/: example-ae-win.c
msvs/win32_interop/: win32_wsiocp.c  win32_wsiocp.h
